[package]
name = "qikfind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3"}
regex = "1"
indicatif = "0.15.0"
num_cpus = "1.0"
number_prefix = "0.4"
console = ">=0.9.1, <1.0.0"
glob = "0.3.0"